native/java/bindings/zusf_c_api.h

// Generic response structs
typedef struct {
    char* error_message; // Non-null if an error occurred
} ZUSFBasicResponse_C;
typedef struct {
    char* data;          // The string response content
    char* error_message; // Non-null if an error occurred
} ZUSFStringResponse_C;
// ListOptions mapping
typedef struct {
    bool all_files;
    bool long_format;
    int max_depth;
} ZUSFListOptions_C;
// API Functions
ZUSFBasicResponse_C* zusf_c_create_uss_file(const char* file, const char* mode);
ZUSFBasicResponse_C* zusf_c_create_uss_dir(const char* file, const char* mode);
ZUSFStringResponse_C* zusf_c_list_uss_dir(const char* path, const ZUSFListOptions_C* options);
ZUSFBasicResponse_C* zusf_c_move_uss_file_or_dir(const char* source, const char* destination);
ZUSFStringResponse_C* zusf_c_read_uss_file(const char* file, const char* codepage);