native/java/app/src/main/java/org/zowe/zowex/ffm/generated/ZusfCApi.java

// Generated by jextract

package org.zowe.zowex.ffm.generated;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class ZusfCApi extends ZusfCApi$shared {

    ZusfCApi() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    private static final int true_ = (int)1L;
    /**
     * {@snippet lang=c :
     * #define true 1
     * }
     */
    public static int true_() {
        return true_;
    }
    private static final int false_ = (int)0L;
    /**
     * {@snippet lang=c :
     * #define false 0
     * }
     */
    public static int false_() {
        return false_;
    }
    private static final int __bool_true_false_are_defined = (int)1L;
    /**
     * {@snippet lang=c :
     * #define __bool_true_false_are_defined 1
     * }
     */
    public static int __bool_true_false_are_defined() {
        return __bool_true_false_are_defined;
    }
    /**
     * {@snippet lang=c :
     * typedef long ptrdiff_t
     * }
     */
    public static final OfLong ptrdiff_t = ZusfCApi.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long size_t
     * }
     */
    public static final OfLong size_t = ZusfCApi.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef int wchar_t
     * }
     */
    public static final OfInt wchar_t = ZusfCApi.C_INT;

    private static class zusf_c_create_uss_file {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zusf_c_create_uss_file");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_create_uss_file(const char *file, const char *mode)
     * }
     */
    public static FunctionDescriptor zusf_c_create_uss_file$descriptor() {
        return zusf_c_create_uss_file.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_create_uss_file(const char *file, const char *mode)
     * }
     */
    public static MethodHandle zusf_c_create_uss_file$handle() {
        return zusf_c_create_uss_file.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_create_uss_file(const char *file, const char *mode)
     * }
     */
    public static MemorySegment zusf_c_create_uss_file$address() {
        return zusf_c_create_uss_file.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_create_uss_file(const char *file, const char *mode)
     * }
     */
    public static MemorySegment zusf_c_create_uss_file(MemorySegment file, MemorySegment mode) {
        var mh$ = zusf_c_create_uss_file.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zusf_c_create_uss_file", file, mode);
            }
            return (MemorySegment)mh$.invokeExact(file, mode);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zusf_c_create_uss_dir {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zusf_c_create_uss_dir");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_create_uss_dir(const char *file, const char *mode)
     * }
     */
    public static FunctionDescriptor zusf_c_create_uss_dir$descriptor() {
        return zusf_c_create_uss_dir.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_create_uss_dir(const char *file, const char *mode)
     * }
     */
    public static MethodHandle zusf_c_create_uss_dir$handle() {
        return zusf_c_create_uss_dir.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_create_uss_dir(const char *file, const char *mode)
     * }
     */
    public static MemorySegment zusf_c_create_uss_dir$address() {
        return zusf_c_create_uss_dir.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_create_uss_dir(const char *file, const char *mode)
     * }
     */
    public static MemorySegment zusf_c_create_uss_dir(MemorySegment file, MemorySegment mode) {
        var mh$ = zusf_c_create_uss_dir.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zusf_c_create_uss_dir", file, mode);
            }
            return (MemorySegment)mh$.invokeExact(file, mode);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zusf_c_list_uss_dir {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zusf_c_list_uss_dir");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_list_uss_dir(const char *path, const ZUSFListOptions_C *options)
     * }
     */
    public static FunctionDescriptor zusf_c_list_uss_dir$descriptor() {
        return zusf_c_list_uss_dir.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_list_uss_dir(const char *path, const ZUSFListOptions_C *options)
     * }
     */
    public static MethodHandle zusf_c_list_uss_dir$handle() {
        return zusf_c_list_uss_dir.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_list_uss_dir(const char *path, const ZUSFListOptions_C *options)
     * }
     */
    public static MemorySegment zusf_c_list_uss_dir$address() {
        return zusf_c_list_uss_dir.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_list_uss_dir(const char *path, const ZUSFListOptions_C *options)
     * }
     */
    public static MemorySegment zusf_c_list_uss_dir(MemorySegment path, MemorySegment options) {
        var mh$ = zusf_c_list_uss_dir.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zusf_c_list_uss_dir", path, options);
            }
            return (MemorySegment)mh$.invokeExact(path, options);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zusf_c_move_uss_file_or_dir {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zusf_c_move_uss_file_or_dir");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_move_uss_file_or_dir(const char *source, const char *destination)
     * }
     */
    public static FunctionDescriptor zusf_c_move_uss_file_or_dir$descriptor() {
        return zusf_c_move_uss_file_or_dir.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_move_uss_file_or_dir(const char *source, const char *destination)
     * }
     */
    public static MethodHandle zusf_c_move_uss_file_or_dir$handle() {
        return zusf_c_move_uss_file_or_dir.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_move_uss_file_or_dir(const char *source, const char *destination)
     * }
     */
    public static MemorySegment zusf_c_move_uss_file_or_dir$address() {
        return zusf_c_move_uss_file_or_dir.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_move_uss_file_or_dir(const char *source, const char *destination)
     * }
     */
    public static MemorySegment zusf_c_move_uss_file_or_dir(MemorySegment source, MemorySegment destination) {
        var mh$ = zusf_c_move_uss_file_or_dir.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zusf_c_move_uss_file_or_dir", source, destination);
            }
            return (MemorySegment)mh$.invokeExact(source, destination);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zusf_c_read_uss_file {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zusf_c_read_uss_file");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_read_uss_file(const char *file, const char *codepage)
     * }
     */
    public static FunctionDescriptor zusf_c_read_uss_file$descriptor() {
        return zusf_c_read_uss_file.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_read_uss_file(const char *file, const char *codepage)
     * }
     */
    public static MethodHandle zusf_c_read_uss_file$handle() {
        return zusf_c_read_uss_file.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_read_uss_file(const char *file, const char *codepage)
     * }
     */
    public static MemorySegment zusf_c_read_uss_file$address() {
        return zusf_c_read_uss_file.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_read_uss_file(const char *file, const char *codepage)
     * }
     */
    public static MemorySegment zusf_c_read_uss_file(MemorySegment file, MemorySegment codepage) {
        var mh$ = zusf_c_read_uss_file.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zusf_c_read_uss_file", file, codepage);
            }
            return (MemorySegment)mh$.invokeExact(file, codepage);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
